# patholint

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/: v5.md  v6.md
patholint/: cli.py  models.py
prompts/: house_ruleset.md  instruction.md  zeroshot.md
vpd/: cli.py  models.py
