[project]
name = "patholint"
version = "0.1.0"
description = "LLM-based pathology report validation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic-autocli>=0.3.2",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["patholint"]

[project.scripts]
patholint = "patholint.cli:main"
